<!-- Spencer Jones
     MDV3832-0 - 062024
     activity_main.xml (Portrait) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/collection_views"
        android:textAlignment="center"
        android:textSize="48sp"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/details_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:layout_margin="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/character_first_appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_appearance"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/character_issues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issues"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/character_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>